# general_utilities

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  sub_package.toml
general_utilities/: association_resources.py  mrc_logger.py
general_utilities/R_resources/: runSTAAR_Genes.R  runSTAAR_Null.R
general_utilities/bgen_utilities/: genotype_matrix.py
general_utilities/import_utils/: dxfuse.py  genetics_loader.py  import_classes.py  import_lib.py
general_utilities/import_utils/file_handlers/: dnanexus_utilities.py  export_file_handler.py  input_file_handler.py
general_utilities/import_utils/module_loader/: association_pack.py  ingest_data.py  input_file_handler.py  input_parser.py  insmedinput.py  module_loader.py
general_utilities/job_management/: command_executor.py  job_launcher.py  job_launcher_interface.py  joblauncher_factory.py  joblauncher_interface.py  subjob_manager.py  subjob_test.py  subjob_utility.py  thread_utility.py
general_utilities/job_management/subjob_test/: subjob_test.py
general_utilities/job_management/subjob_test/subjob_subpackage/: tabix_subjob_testing.py
general_utilities/linear_model/: linear_model.py  proccess_model_output.py  staar_model.py
general_utilities/linear_model/R_resources/: runSTAAR_Genes.R  runSTAAR_Null.R
general_utilities/platform_utils/: platform_factory.py
general_utilities/plot_lib/: cluster_plotter.py  manhattan_plotter.py  plotter.py
general_utilities/plot_lib/R_resources/: manhattan_plotter.R  manhattan_plotter_call.py  manhattan_plotter_script.py
general_utilities/subjob_utility/: subjob_utility.py
general_utilities/thread_utility/: thread_utility.py
test/: association_resources_test.py  generalutilities_test.py  job_management_test.py  test_command_executor.py  test_export_file_handler.py  test_input_file_handler.py  test_linear_model.py  test_module_loader.py  test_staar.py
test/subjob/: subjob_test.py
test/test_data/linear_model/: expt_genes.GENE.tsv  expt_genes.PTV.tsv  expt_genes.PTV_chunk1.tsv  expt_genes.SNP.tsv
