[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "general_utilities"
version = "1.5.2"
description = ""
authors = [ "Eugene Gardner <eugene.gardner@mrc-epid.cam.ac.uk>",]
readme = "README.md"
repository = "https://github.com/mrcepid-rap/general_utilities"

[tool.poetry.dependencies]
python = "~3.12"
dxpy = "^0.387.0"
numpy = "^2.2"
pandas = "^2.2"
scipy = "^1.15"
statsmodels = "^0.14"
pytest = "^7.4.0"
